Changelog
=========

Version 2.1
-----------

* Replace the generic README in the plone_hosting template with documentation
  that is important for deployments. 
  [wichert]

* Add log rotation support to the hosting buildout. Merged from Jarn's
  bones package.
  [wichert]


Version 2.0
-----------

* Switch plone_hosting template to using supervisord to manage processes.
  Merged from Jarn's bones package.
  [wichert]

* Reduced the number of questions to generate an atschema and used 
  the MessageFactory instead of declaring an i18n_domain attribute
  [mustapha]

* Fixed missing imports in plone2_theme
  [mustapha]

* Removed unused imports in plone_pas
  [mustapha]

* In plone2.5_theme: when the skinname is empty, replace it with a
  default text, otherwise adding a Plone Site will throw an error when
  displaying the extension profiles.
  [maurits]

* Added note to profiles.zcml of plone2.5_theme that
  five.registerPackage needs Five version 1.4.
  [maurits]

* Added a BUILDBOT.txt file.
  [tarek]

* plone3_portlet: added commented out alternative AddForm for when
  there are no configurable parameters.  That was shorter than listing
  all the changes (where we forgot one).
  [maurits]

* Fixed typos in archetyps and plone3 portlets: 'portletBotomLeft'
  should have been 'portletBottomLeft' with two 't's.
  [maurits]

* Made plone3_portlet respect pep8 (and pyflakes).
  [maurits]

* Use 1.0 as default version number for all templates. This is a more sensible
  default than 0.1 since we start of with dev-versions anyway.
  [wichert]

* sub-templates per ZopeSkel template: Only sub-templates related to the parent
  template is visible with the -l option
  [mustapha]

* added -a (--list-all) option to show all subtemplates regardless of the
  current project. Subtemplates that are not for the type of the current
  project are prefixed with N
  [mustapha]

* Fixed the recreation of the paster_plugins.txt metadata file for archetype.